# django-healthcare-api

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
accounts/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
doctors/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
doctors/migrations/: 0001_initial.py
mappings/: models.py  serializers.py  tests.py  urls.py  views.py
mappings/migrations/: 0001_initial.py
patients/: models.py  serializers.py  tests.py  urls.py  views.py
patients/migrations/: 0001_initial.py
